# hermes-memory

./: .dockerignore  .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  Dockerfile.publish  Hermes.Memory.sln  KANBAN-PLAN.md  PLAN-V2-PYTHON-ONLY.md  PLAN-VS-SHIPPED.md  README.md  global.json  install.sh  pyproject.toml
.github/workflows/: build-binary.yml  build-docker.yml  ci.yml  docker.yml  release.yml  test.yml
compose/: .env.example  compose.yaml
docker/: README.md
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/initdb.d/: 00-extensions.sql  01-template-bootstrap.sh
docs/: system-commandline-migration.md
install/: README.md
install/lib/: compose.sh  detect.sh  dsn.sh  embedder.sh  mcp.sh  pg.sh  report.sh  state.py  state.sh  ui.sh
install/steps/: 00_preflight.sh  100_smoke.sh  10_postgres.sh  110_summary.sh  20_extensions.sh  30_template.sh  40_profiles.sh  50_dsn.py  50_dsn.sh  60_embedder.sh  70_binary.sh  80_mcp.sh  90_introduce.sh  _dispatch.sh  _step_run.py
migrations/: 0001_agent_memory.sql  0002_wiki.sql  0003_journal.sql  0005_metrics.sql  0006_kanban.sql  0009_observability.sql  0010_memory_chunks.sql  0011_kanban_event_actor.sql
plugins/kanban/postgres/: __init__.py  events.py  shim.py
plugins/memory/postgres/: __init__.py  budgeter.py  cli.py  embedder.py  import_builtin.py
plugins/observability/postgres/: __init__.py
plugins/session/postgres/: __init__.py
plugins/wiki/postgres/: __init__.py
scripts/: hermes-bootstrap.sh  pre-commit
skills/hermes-memory/: SKILL.md
src/Hermes.Memory.Cli/: EmbedHandler.cs  Hermes.Memory.Cli.csproj  InstallCommand.cs  MigrateHandler.cs  PreflightHandler.cs  ProfileHandler.cs  Program.cs  UninstallCommand.cs  VersionHandler.cs
src/Hermes.Memory.Core/: Hermes.Memory.Core.csproj  NativeAot.Trim.xml
src/Hermes.Memory.Core/Db/: DsnNormalizer.cs  HermesDataSource.cs  MigrationRunner.cs
src/Hermes.Memory.Core/Embeddings/: EmbedderRegistry.cs  HermesEmbedder.cs
src/Hermes.Memory.Core/Journal/: JournalRepository.cs
src/Hermes.Memory.Core/Kanban/: KanbanRepository.cs
src/Hermes.Memory.Core/Mcp/: JournalTools.cs  KanbanTools.cs  McpHost.cs  MemoryTools.cs  MetricsTools.cs  SkillsTools.cs  WikiTools.cs
src/Hermes.Memory.Core/Memory/: MemoryRepository.cs
src/Hermes.Memory.Core/Metrics/: MetricsRepository.cs
src/Hermes.Memory.Core/Models/: McpError.cs  (+3 more)
src/hermes_memory/: __init__.py  cli.py  entry.py  migrate.py  override.py  pg_repos.py  plugin.yaml  register.py
tests/Hermes.Memory.Integration/: Hermes.Memory.Integration.csproj  KanbanRepositoryTests.cs  MemoryRepositoryTests.cs  WikiRepositoryTests.cs
tests/Hermes.Memory.Tests/: CacheKeyTests.cs  Hermes.Memory.Tests.csproj
tests/integration/: conftest.py  test_ci_bootstrap.py  test_pg_journal.py  test_pg_kanban.py  test_pg_metrics.py  test_pg_observability.py  test_pg_register.py  test_pg_sessions.py  test_pg_skills.py  test_pg_wiki.py  test_smoke.py
tests/python/: test_kanban_claim.py
tests/unit/: conftest.py  test_chunker.py  test_cli.py  test_cli_env_heal.py  test_cli_install_wiring.py  test_cli_step_flag.py  test_cli_stub_steps.py  test_doctor.py  test_install.py  test_kanban_repo.py  test_memory_repo.py  test_memory_shim_install.py  test_migrate.py  test_misc_repos.py  test_obs_sessions_repos.py  test_override.py  test_register.py  test_tools.py  test_wiki_repo.py
(+33 files in other folders)
