[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory"
version = "2.0.0"
description = "PostgreSQL + pgvector memory, wiki, journal, skills, metrics, kanban, sessions, and observability for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shakib Haris"}]
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = []  # we don't ship MCP; the [mcp] extra is a placeholder for parity
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
]

[project.scripts]
hermes-memory = "hermes_memory.cli:main"

[project.entry-points."hermes_agent.plugins"]
hermes-postgres-memory = "hermes_memory:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_memory = [
    "plugin.yaml",
    "entry.py",
    "migrations/*.sql",
    "docker/postgres/*",
    "shim/postgres/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # long lines are OK in test code

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts are fine in tests
"src/hermes_memory/**" = [
    "UP037",   # quoted forward refs in heavy use
    "SIM117",  # cosmetic; readability wins
    "SIM102",  # cosmetic; readability wins
    "UP042",   # StrEnum migration is a 3.11+ thing; not blocking
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "-v --tb=short"
markers = [
    "integration: requires a real Postgres (auto-skipped without one)",
]
